# hackrf_projects

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  make_proto.sh
include/: hackrf_state.h  hackrf_tools.h  hackrf_util.h  util.h
proto/: realtime.proto
src/: CMakeLists.txt  capture_to_file.c  capture_to_file.cpp  energy_detector.c  energy_detector.cpp  fftw_test.c  hackrf_check.cpp  hackrf_fft.cpp  hackrf_state.c  hackrf_tools.cpp  hackrf_util.c  realtime.py  sender.py  util.c
